--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 node_modules
 dist
 .parcel-cache
+user-stories
+forkify-architecture-recipe-loading.png
+forkify-flowchart-part-1.png
+forkify-flowchart-part-2.png
+forkify-flowchart-part-3.png
+.babelrc
